# problems

./: README.md
BP_Project/: README.md  config.py  main.py
BP_Project/core/: emoji.py
BP_Project/data/: countries.json  info.json  languages.json
Basis Programming/pack_2/: problem_1.1.py  problem_2.py  problem_3.py
Basis Programming/pack_3/: problem_2.py  problem_3.py
Basis_Programming/pack_1/: problem_0.py  problem_2.py  problem_3.py  problem_4.py
Basis_Programming/pack_2/: problem_1.2.py
Basis_Programming/pack_3/: problem_1.py
Basis_Programming/pack_4/: problem_1.py  problem_2.py
Basis_Programming/pack_5/: problem_2.ipynb
Basis_Programming/pack_6/: DLB.py  problem_1.py  problem_2.py  problem_3.py
Component Programming/: README.md
Component Programming/task1/: README.md  meson.build
Component Programming/task2/: README.md  meson.build
Component Programming/task3/: README.md
Component Programming/task4/: README.md  meson.build
Component Programming/task5/: README.md  meson.build
Component Programming/task6/: README.md
Component Programming/task7/: README.md  meson.build
Component Programming/task8/: README.md  (+1 more)
Component Programming/task8/src/templates/: count_test.cc  figures.cc  figures.hh  main.cc  meson.build  my_count.cc
Machine Learning/: README.md  newsclassifier.py
Numerical Methods/: .gitignore  README.md
Numerical_Methods/: README.md  task1.1.py  task1.2.py  task1.3.py  task2.1.py  task2.2.py  task2.3.m
pack_1/: problem_1.py
pack_3/: problem_2.py  problem_3.py
pack_4/: problem_3.py
pack_5/: problem_1.ipynb
(+85 files in other folders)
